chore: Drop JDK 8 from build
* remove java 8 home and other complicated things from the build
* move src from java-jdk9-only, scala-jdk-9, java-jdk-9